--- a/src/assets/front/css/main.css
+++ b/src/assets/front/css/main.css
@@ -555,7 +555,7 @@ input:-internal-autofill-selected {
 }
 
 #homeSection #homeLeader #headerContent #buttons {
-    width: 30%;
+    width: 28%;
 }
 
 #homeSection #homeLeader #headerContent.reStyleHeaderContent #buttons button i {
@@ -601,7 +601,7 @@ input:-internal-autofill-selected {
 
 #homeSection #homeLeader #ambassadorButton {
     background-color: #01B74A;
-    padding: 15px;
+    padding: 10px;
     width: max-content;
     height: max-content;
     border-radius: 10px;
@@ -634,6 +634,10 @@ svg#newsSvg,
 #articleSvg,
 #cookingHomeSvg {
     opacity: 0.15;
+}
+
+.blogCart .innerContent img {
+    object-fit: cover;
 }
 
 #homeSection #footer {
@@ -872,6 +876,7 @@ svg#newsSvg,
     border-radius: 15px;
     margin: 0;
     width: 34%;
+    min-height: 280px;
 }
 
 #homeSection #aboutUsSection .aboutCart img {
@@ -1169,11 +1174,10 @@ svg#newsSvg,
 
 #homeSection #articles #sectionHeader {
     margin: 2% auto -2%;
-    transform: scale(0.8);
 }
 
 #homeSection #articles #sliderSection {
-    transform: scale(0.8);
+    transform: scale(0.9, .8)
 }
 
 #homeSection #weblogsSection #multiSlider .cart .content .date span {
@@ -2610,11 +2614,15 @@ input[type=number] {
     color: white
 }
 
+#healthAmbassador {
+    position: relative
+}
+
 #healthAmbassador #headerContent {
-    width: 80%;
-    margin: 2% auto;
+    width: 100%;
+    padding: 2% 10%;
     position: relative;
-    z-index: 2
+    z-index: 10;
 }
 
 #healthAmbassador #navBarMenu {
@@ -3728,8 +3736,53 @@ div#application {
     width: 100vw;
     height: 100vh;
     z-index: 10000;
-    left: -12.5%;
-    top: -44%;
+    top: 0;
+    left: 0;
+}
+
+#healthAmbassador #searchModal {}
+
+div#rawMaterial h3 {
+    text-align: right;
+    font-size: 22px;
+    font-family: 'yekan-bold';
+    color: #B11116;
+}
+
+#rawMaterial {
+    background-color: #FCF5F5;
+    width: 100%;
+    margin: 30px auto;
+    padding: 30px;
+    border-radius: 10px;
+}
+
+#rawMaterial .material div p span:first-child {
+    font-family: 'yekan-heavy';
+    font-size: 18px;
+}
+
+#rawMaterial .material div p {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#rawMaterial .material div img {
+    width: 64px;
+    height: 64px;
+    margin: 0 10px;
+}
+
+#rawMaterial .material div {
+    display: flex;
+    align-items: center;
+    margin: 10px;
+}
+
+#rawMaterial .material {
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 #mobileMenu {
@@ -3739,7 +3792,7 @@ div#application {
     width: 100%;
     height: 100vh;
     /* background: #625d5d; */
-    background: #000000eb;
+    background: #000000d6;
     position: fixed;
     align-items: center;
     z-index: 1000000000000;
@@ -3916,6 +3969,13 @@ img#moonSvg {
 
 
 /* @media  */
+
+@media (max-width:425px) {
+    #introductionSection #content .innerContent .mainImage {
+        width: 100% !important;
+        min-width: 90% !important;
+    }
+}
 
 @media (max-width:1000px) {
     #homeSection #weblogsSection #singleSlider .cart .content h1 {
@@ -4279,11 +4339,6 @@ img#moonSvg {
         background: white;
         box-shadow: 0 0 10px black;
         padding: 10px;
-    }
-    @media (max-width:425px) {
-        #introductionSection #content .innerContent .mainImage {
-            width: 100% !important
-        }
     }
     #introductionSection #content div h3 {
         margin: 0;
